--- a/src/app/pages/aprobadas-ssas/aprobadas-ssas.component.html
+++ b/src/app/pages/aprobadas-ssas/aprobadas-ssas.component.html
@@ -18,38 +18,8 @@
                     <mat-select formControlName="modalidad">
                         <mat-option value="">- Selecciona una opción -</mat-option>
                         @for (modalidad of modalidades; track modalidad) {
-                        <mat-option [value]="modalidad.id">{{modalidad.nombre}}</mat-option>
+                        <mat-option [value]="modalidad.nombre">{{modalidad.nombre}}</mat-option>
                         }
-                    </mat-select>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <mat-label>Fecha de registro</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate formControlName="fechaInicio" placeholder="Inicio">
-                        <input matEndDate formControlName="fechaFin" placeholder="Fin">
-                    </mat-date-range-input>
-                    <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <mat-label>Cajero</mat-label>
-                    <mat-select formControlName="cajero">
-                        <mat-option value="">- Selecciona una opción -</mat-option>
-                        @for (cajero of cajeros; track cajero) {
-                        <mat-option [value]="cajero.id">{{cajero.email}}</mat-option>
-                        }
-                    </mat-select>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <mat-label>Credencializado</mat-label>
-                    <mat-select formControlName="credencializado">
-                        <mat-option value="">- Selecciona una opción -</mat-option>
-                        <mat-option value="1">Credencializado</mat-option>
-                        <mat-option value="0">Pendiente</mat-option>
                     </mat-select>
                 </mat-form-field>
 
@@ -71,9 +41,26 @@
                     [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
                 <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
                     [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button>
+                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded"
+                    (click)="downloadPlantilla()">Descargar plantilla</button>
             </div>
 
             <div class="flex justify-start items-center gap-5">
+                <div>
+                    <label for="txtFile" class="btn">
+                        <i
+                            class="fa fa-cloud-upload bg-orange-300 hover:bg-green-350 text-white font-bold py-2 px-4 rounded">
+                            Importar Curps Aprobadas XLSX
+                        </i>
+                    </label>
+                    <div class="input-group">
+                        <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file"
+                            formControlName="file" (change)="onFileSelected($event)">
+                    </div>
+                    <div *ngIf="lblUploadingFile" style="margin: 0;font-size: 18px;color: #5270ae;">
+                        <label style="font-weight: 500;">{{lblUploadingFile}}</label>
+                    </div>
+                </div>
                 <button (click)="formConsulta.reset()"
                     class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
                     [disabled]="!generado || loading">
@@ -129,6 +116,18 @@
                         <td mat-cell *matCellDef="let row"> {{row.apellido_materno}}</td>
                     </ng-container>
 
+                    <!-- Modalidad -->
+                    <ng-container matColumnDef="modalidad">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Modalidad</th>
+                        <td mat-cell *matCellDef="let row"> {{row.modalidad}} </td>
+                    </ng-container>
+
+                    <!-- FPU -->
+                    <ng-container matColumnDef="fpu">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>FPU</th>
+                        <td mat-cell *matCellDef="let row"> {{row.fpu}} </td>
+                    </ng-container>
+
                     <!-- Módulo -->
                     <ng-container matColumnDef="modulo">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>Módulo</th>
@@ -147,10 +146,25 @@
                         <td mat-cell *matCellDef="let row"> {{row.celular }} </td>
                     </ng-container>
 
-                    <!-- Telefono -->
-                    <ng-container matColumnDef="telefono">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
-                        <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+                    <!-- created_at -->
+                    <ng-container matColumnDef="created_at">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>created_at</th>
+                        <td mat-cell *matCellDef="let row">{{row.created_at | date:'dd/MM/yyyy hh:mm:ss'}}</td>
+                    </ng-container>
+                    <!-- created_id -->
+                    <ng-container matColumnDef="created_id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>created_id</th>
+                        <td mat-cell *matCellDef="let row"> {{row.created_id}} </td>
+                    </ng-container>
+                    <!-- updated_at -->
+                    <ng-container matColumnDef="updated_at">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>updated_at</th>
+                        <td mat-cell *matCellDef="let row">{{row.updated_at | date:'dd/MM/yyyy hh:mm:ss'}}</td>
+                    </ng-container>
+                    <!-- updated_id -->
+                    <ng-container matColumnDef="updated_id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>updated_id</th>
+                        <td mat-cell *matCellDef="let row"> {{row.updated_id}} </td>
                     </ng-container>
 
                     <!-- Acciones -->
@@ -160,20 +174,17 @@
                             <div
                                 class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
 
-                                <button mat-button (click)="openDialog(row.id)" color="primary">Ver más</button>
-                                @if (permisoAcciones) {
-                                <button mat-button color="primary"
-                                    [routerLink]="['/inicio/editar/', row.id]">Editar</button>
+                                <button mat-button (click)="editRow(row)" color="primary">Editar</button>
                                 <button mat-button (click)="deleteAspiranteBeneficio(row.id)"
                                     color="accent">Eliminar</button>
+                                @if (permisoAcciones) {
                                 }
                             </div>
                         </td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick($event, row.id)"
-                        class="cursor-pointer"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cursor-pointer"></tr>
 
                     <!-- Row shown when there is no matching data. -->
                     <tr class="mat-row" *matNoDataRow>
