--- a/src/app/pages/aprobadas-ssas/aprobadas-ssas.component.html
+++ b/src/app/pages/aprobadas-ssas/aprobadas-ssas.component.html
@@ -1,1 +1,202 @@
-<p>aprobadas-ssas works!</p>
+<div class="container  py-5 mx-auto">
+    <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+
+        <div class="flex items-center justify-between">
+            <form [formGroup]="formConsulta" class="flex items-center justify-between flex-wrap gap-2">
+                <mat-form-field>
+                    <mat-label>Módulo</mat-label>
+                    <mat-select formControlName="modulo">
+                        <mat-option value="">- Selecciona una opción -</mat-option>
+                        @for (modulo of modulos; track modulo) {
+                        <mat-option [value]="modulo.nombre">{{modulo.nombre}}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <mat-label>Modalidad</mat-label>
+                    <mat-select formControlName="modalidad">
+                        <mat-option value="">- Selecciona una opción -</mat-option>
+                        @for (modalidad of modalidades; track modalidad) {
+                        <mat-option [value]="modalidad.nombre">{{modalidad.nombre}}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+
+                <mat-form-field class="w-100">
+                    <mat-label>Buscar</mat-label>
+                    <input matInput formControlName="search" placeholder="Buscar..."
+                        (keyup.enter)="getCurpsAprovadasSsas()">
+                </mat-form-field>
+            </form>
+        </div>
+
+    </div>
+
+
+    <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+        <div class="flex justify-between items-center mb-2">
+            <div class="flex justify-start items-center gap-5">
+                <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+                    [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+                    [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button>
+                <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded"
+                    (click)="downloadPlantilla()">Descargar plantilla</button>
+            </div>
+
+            <div class="flex justify-start items-center gap-5">
+                <div>
+                    <label for="txtFile" class="btn">
+                        <i
+                            class="fa fa-cloud-upload bg-orange-300 hover:bg-green-350 text-white font-bold py-2 px-4 rounded">
+                            Importar Curps Aprobadas XLSX
+                        </i>
+                    </label>
+                    <div class="input-group">
+                        <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file"
+                            formControlName="file" (change)="onFileSelected($event)">
+                    </div>
+                    <div *ngIf="lblUploadingFile" style="margin: 0;font-size: 18px;color: #5270ae;">
+                        <label style="font-weight: 500;">{{lblUploadingFile}}</label>
+                    </div>
+                </div>
+                <button (click)="formConsulta.reset()"
+                    class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
+                    [disabled]="!generado || loading">
+                    <mat-icon matSuffix>clear_all</mat-icon>
+                    <span>Limpiar campos</span>
+                </button>
+
+                <button (click)="getCurpsAprovadasSsas()"
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2">
+                    <span>
+                        Consultar
+                    </span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 12h12" />
+                        <path d="M11 8l4 4l-4 4" />
+                        <path d="M12 21a9 9 0 0 0 0 -18" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <div *ngIf="loading; else loaded">
+            <mat-spinner class="mx-auto my-5"></mat-spinner>
+        </div>
+
+        <ng-template #loaded>
+            <div class="table-container mat-elevation-z8" style="background-color: white;">
+                <table mat-table [dataSource]="dataSource" matSort>
+                    <!-- CURP -->
+                    <ng-container matColumnDef="curp">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>CURP</th>
+                        <td mat-cell *matCellDef="let row"> {{row.curp}} </td>
+                    </ng-container>
+
+                    <!-- Nombre -->
+                    <ng-container matColumnDef="nombre">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+                        <td mat-cell *matCellDef="let row"> {{row.nombre}}</td>
+                    </ng-container>
+
+                    <!-- Apellido paterno -->
+                    <ng-container matColumnDef="apellido_paterno">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellido paterno</th>
+                        <td mat-cell *matCellDef="let row"> {{row.apellido_paterno}}</td>
+                    </ng-container>
+
+                    <!-- Apellido materno -->
+                    <ng-container matColumnDef="apellido_materno">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellido materno</th>
+                        <td mat-cell *matCellDef="let row"> {{row.apellido_materno}}</td>
+                    </ng-container>
+
+                    <!-- Modalidad -->
+                    <ng-container matColumnDef="modalidad">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Modalidad</th>
+                        <td mat-cell *matCellDef="let row"> {{row.modalidad}} </td>
+                    </ng-container>
+
+                    <!-- FPU -->
+                    <ng-container matColumnDef="fpu">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>FPU</th>
+                        <td mat-cell *matCellDef="let row"> {{row.fpu}} </td>
+                    </ng-container>
+
+                    <!-- Módulo -->
+                    <ng-container matColumnDef="modulo">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Módulo</th>
+                        <td mat-cell *matCellDef="let row"> {{row.modulo}} </td>
+                    </ng-container>
+
+                    <!-- Teléfono -->
+                    <ng-container matColumnDef="telefono">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
+                        <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+                    </ng-container>
+
+                    <!-- Celular -->
+                    <ng-container matColumnDef="celular">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Celular</th>
+                        <td mat-cell *matCellDef="let row"> {{row.celular }} </td>
+                    </ng-container>
+
+                    <!-- created_at -->
+                    <ng-container matColumnDef="created_at">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>created_at</th>
+                        <td mat-cell *matCellDef="let row">{{row.created_at | date:'dd/MM/yyyy hh:mm:ss'}}</td>
+                    </ng-container>
+                    <!-- created_id -->
+                    <ng-container matColumnDef="created_id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>created_id</th>
+                        <td mat-cell *matCellDef="let row"> {{row.created_id}} </td>
+                    </ng-container>
+                    <!-- updated_at -->
+                    <ng-container matColumnDef="updated_at">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>updated_at</th>
+                        <td mat-cell *matCellDef="let row">{{row.updated_at | date:'dd/MM/yyyy hh:mm:ss'}}</td>
+                    </ng-container>
+                    <!-- updated_id -->
+                    <ng-container matColumnDef="updated_id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>updated_id</th>
+                        <td mat-cell *matCellDef="let row"> {{row.updated_id}} </td>
+                    </ng-container>
+
+                    <!-- Acciones -->
+                    <ng-container matColumnDef="acciones">
+                        <th class="text-right" mat-header-cell *matHeaderCellDef> Acciones </th>
+                        <td mat-cell *matCellDef="let row" class="action-cell">
+                            <div
+                                class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
+
+                                <button mat-button (click)="editRow(row)" color="primary">Editar</button>
+                                <button mat-button (click)="deleteAspiranteBeneficio(row.id)"
+                                    color="accent">Eliminar</button>
+                                @if (permisoAcciones) {
+                                }
+                            </div>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cursor-pointer"></tr>
+
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell p-5" colspan="4">No hay coincidencias</td>
+                    </tr>
+                </table>
+            </div>
+
+            <mat-paginator [length]="total" [pageSize]="perPage" [pageIndex]="currentPage"
+                [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons (page)="onPaginateChange($event)">
+            </mat-paginator>
+        </ng-template>
+    </div>
+
+</div>
