Refactor FotoComponent and related services to use async/await for better readability and error handling; implement new uploadFoto and uploadDocs methods; streamline database interactions in CRUD services by converting Observable methods to Promise-based; enhance error handling and rollback mechanisms.

--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -111,7 +111,7 @@
 
           <mat-form-field class="basis-1/4">
             <mat-label>Grado </mat-label>
-            <mat-select [(ngModel)]="grado" formControlName="grado" (selectionChange)="onGradoChange($event.value)">
+            <mat-select formControlName="grado" (selectionChange)="onGradoChange($event.value)">
               <mat-option *ngFor="let grado of grados" [value]="grado.id">
                 {{ grado.nombre }}
               </mat-option>
@@ -120,8 +120,7 @@
 
           <mat-form-field class="basis-1/4">
             <mat-label>Tipo Carrera </mat-label>
-            <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera"
-              (selectionChange)="onTipoCarreraChange($event.value)">
+            <mat-select formControlName="tipo_carrera" (selectionChange)="onTipoCarreraChange($event.value)">
               <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.id">
                 {{ tipo_carrera.nombre }}
               </mat-option>
@@ -142,11 +141,9 @@
 
         <div class="flex flex-row gap-2">
 
-
           <mat-form-field class="basis-2/3">
             <mat-label>Municipio</mat-label>
-            <mat-select [(ngModel)]="municipio" formControlName="municipio" name="municipio"
-              (selectionChange)="onMunicipioChange($event.value)">
+            <mat-select formControlName="municipio" (selectionChange)="onMunicipioChange($event.value)">
               <mat-option *ngFor="let municipio of municipios" [value]="municipio.municipio">
                 {{ municipio.municipio }}
               </mat-option>
@@ -167,7 +164,6 @@
               <mat-option *ngFor="let option of filteredOptions" [value]="option.cp">{{option.cp}}</mat-option>
             </mat-autocomplete>
           </mat-form-field>
-
 
         </div>
 
