--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -331,7 +331,9 @@
         </div>
       </div>
       <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button (click)="crearCaratula(getSelectedValues(seleccionCaratulas.selectedOptions.selected))" type="button"
+        <button
+          (click)="crearCaratula(getSelectedValues(seleccionCaratulas.selectedOptions.selected), formCaratula.get('fecha')?.value.toISOString().substring(0, 10))"
+          type="button"
           class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
           Imprimir
         </button>
