--- a/src/app/pages/configuraciones/configuraciones.component.html
+++ b/src/app/pages/configuraciones/configuraciones.component.html
@@ -30,7 +30,7 @@
         <!-- Intervalo CURP -->
         <div class="form__row__item">
           <mat-form-field appearance="fill" class="w-full">
-            <mat-label>Intervalo CURP</mat-label>
+            <mat-label>Intervalo CURPs registradas</mat-label>
             <input matInput formControlName="syncCurpInterval" type="number">
           </mat-form-field>
           <mat-slide-toggle formControlName="enableSyncCurpInterval">Activar</mat-slide-toggle>
