--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -432,8 +432,16 @@
                   <div class="form__row mt-3">
                     <div class="form__item">
                       <mat-form-field class="w-full">
-                        <mat-label>Expresión Regular</mat-label>
+                        <mat-label>Expresión regular CURP</mat-label>
                         <input matInput formControlName="regexCurp" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="form__row">
+                    <div class="form__item">
+                      <mat-form-field class="w-full">
+                        <mat-label>Expresión regular fecha</mat-label>
+                        <input matInput formControlName="regexFecha" />
                       </mat-form-field>
                     </div>
                   </div>
